--- a/style/style.css
+++ b/style/style.css
@@ -1,208 +1,1 @@
-
-a {
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-#title {
-    font-size: 25px;
-}
-
-.img {
-    width: 100%;
-    height: 700px;
-}
-
-body {
-    background-color: #eeeeee;
-    background-image: url("../img/fondo bin.png");
-}
-
-#cont{
-    /*height: 300px;*/
-   
-}
-
-.msj {
-    /*top: 15%;
-    width: 100%;
-    position: relative;*/
-    color: white;
-    background-color: rgba(36, 72, 72, 0.5);
-    /*background-color: rgba(250, 72, 190, 0.5);*/
-    padding-top: 5px;
-    padding-bottom: 15px;
-}
-.msj1 {
-    /*top: 15%;
-    /*left: 15%;
-    width: 450px;*/
-    color: white;
-    background: #ccc;
-    background-color: rgba(36, 72, 72, 0.5);
-    /*background-color: rgba(250, 150, 190, 0.5);*/
-    position: relative;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-.inmsj
-{
-    /*left: 15%;*/
-    padding-left: 10%;
-    position: relative;
-}
-a{
-    color: #fff;
-}
-li{
-    font-size: 20px;
-}
-
-#msj1{
-    top: 300px;
-}
-
-/*#left {
-    height: 100%;
-    width: 25%;
-    background-color: transparent;
-    position: absolute;
-    top: 0px;
-    left: 15px;
-    background: linear-gradient(to right, rgba(0,0,0,1) 0%, rgba(194,194,194,0) 76%, rgba(255,255,255,0) 100%);
-    opacity: 0;
-}
-
-#left:hover {
-    opacity: 1;
-}
-
-#right {
-    height: 100%;
-    width: 25%;
-    background-color: transparent;
-    position: absolute;
-    top: 0px;
-    right: 15px;
-    background: linear-gradient(to left, rgba(0,0,0,1) 0%, rgba(194,194,194,0) 76%, rgba(255,255,255,0) 100%);
-    opacity: 0;
-}
-
-#right:hover {
-    opacity: 1;
-}
-*/
-.content{
-    height: 700px;
-    color: #eee;
-    padding: 25px;
-    background-attachment: fixed;
-    background-size: cover;
-}
-
-#content1{
-    background-image: url("../img/paisaje.jpg");
-}
-
-#content2{
-    /*position: absolute;*/
-}
-
-#laptop{
-    position: relative;
-    width: 100%;
-}
-
-#screen{
-    position: absolute;
-    top: 57px;
-    left: 175px;
-    width: 806px;
-    height: 503px;
-    background-image: url("../img/fondolinux.jpg");
-    background-attachment: fixed;
-    background-size: cover;
-}
-
-#insp{
-    top: 80px;
-}
-
-#content3{
-    background-image: url("../img/fondolinux.jpg");
-    height: 150px;
-    opacity: 0.5;
-    top: 270px;
-    position: relative;
-}
-
-#blog{
-    background-image: url("../img/solarSystem.png");
-}
-#wiki{
-    background-image: url("../img/form.jpg");
-}
-#flisol{
-    background-image: url("../img/flisol.jpg");
-}
-
-#imgflisol
-{
-    width: 60%;
-    padding-left: 10%;
-}
-
-#images{
-    top:50px;
-}
-
-.nopadding{
-    padding: 0px;
-}
-
-.padding{
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
-
-.paddingsides{
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-#images{
-    background-image: url("../img/paisaje.jpg");
-    background-attachment: fixed;
-    background-size: cover;
-    height: 700px;
-}
-
-nav{
-    opacity: 0;
-}
-
-#logo{
-    /*left: 50%;*/
-    /*position: absolute;
-    top: 60px;
-    left: 65%;
-    height: 250px;
-    width: 250px;
-    opacity: 1;*/
-    padding: 20px;
-}
-
-.texto{
-    font-size: 20px;
-    text-align: left;
-}
-.spacer{
-    height: 80px;
-}
-
-.distro{
-    width: 20%;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-}
+a{margin-left:10px;margin-right:10px}#title{font-size:25px}.img{width:100%;height:700px}body{background-color:#fff;background-image:url("../img/fondo bin.png")}.msj{color:#fff;background-color:rgba(36,72,72,0.5);padding-top:5px;padding-bottom:15px}.msj1{color:#fff;background:#ccc;background-color:rgba(36,72,72,0.5);position:relative;padding-top:5px;padding-bottom:5px}.inmsj{padding-left:10%;padding-right:10%;position:relative}a{color:#fff}li{font-size:20px}#msj1{top:300px}.content{height:700px;color:#eee;padding:25px;background-attachment:fixed;background-size:cover}#content1{background-color:#ccc;color:#333;height:auto}#laptop{position:relative;width:100%}#screen{position:absolute;top:57px;left:175px;width:806px;height:503px;background-image:url("../img/fondolinux.jpg");background-attachment:fixed;background-size:cover}#insp{top:80px}#content3{background-image:url("../img/fondolinux.jpg");height:150px;opacity:.5;top:270px;position:relative}#blog{background-image:url("../img/solarSystem.png")}#wiki{background-image:url("../img/form.jpg")}#flisol{background-image:url("../img/flisol.jpg")}#imgflisol{width:60%;padding-left:10%}#images{top:50px}.nopadding{padding:0}.padding{padding-top:15px;padding-bottom:15px}.paddingsides{padding-left:15px;padding-right:15px}#images{background-image:url("../img/paisaje.jpg");background-attachment:fixed;background-size:cover;height:700px}nav{opacity:0}#logo{padding:20px}.texto{font-size:20px;text-align:left}.spacer{height:80px}.distro{width:20%;position:relative;margin-left:auto;margin-right:auto}
