--- a/style/style.styl
+++ b/style/style.styl
@@ -10,16 +10,17 @@ a
   height: 700px
 
 body
-  background-color: #eeeeee
+  background-color: #fff
   background-image: url("../img/fondo bin.png")
 
 #cont
-  /*height: 300px;*/
+  /*height: 350px;
+  dlfkjl*/
 
 .msj
   /*top: 15%;
     width: 100%;
-    position: relative;*/
+    */
   color: white
   background-color: rgba(36, 72, 72, 0.5)
   /*background-color: rgba(250, 72, 190, 0.5);*/
@@ -41,6 +42,7 @@ body
 .inmsj
   /*left: 15%;*/
   padding-left: 10%
+  padding-right 10%
   position: relative
 
 a
@@ -90,7 +92,10 @@ li
   background-size: cover
 
 #content1
-  background-image: url("../img/paisaje.jpg")
+  /*background-image: url("../img/paisaje.jpg")*/
+  background-color #ccc
+  color #333
+  height auto
 
 #content2
   /*position: absolute;*/
