--- a/style/style.styl
+++ b/style/style.styl
@@ -1,9 +1,33 @@
+color-content-top = #fff
+color-content-bottom = #c1c1c1
+color-text = #555
+
+gradiente = linear-gradient(to bottom, color-content-top 0%, color-content-bottom  100%);
+
+//@import url('https://fonts.googleapis.com/css?family=Andika|Assistant|Dosis:300|Fjalla+One|Heebo|Inconsolata|Julius+Sans+One|Lato|Megrim|Montserrat|Raleway');
+@import url('https://fonts.googleapis.com/css?family=Heebo|Raleway');
+
+/*
+font-family: 'Raleway', sans-serif;
+font-family: 'Heebo', sans-serif;
+font-family: 'Julius Sans One', sans-serif;
+font-family: 'Assistant', sans-serif;
+font-family: 'Andika', sans-serif;
+font-family: 'Megrim', cursive;
+font-family: 'Lato', sans-serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Fjalla One', sans-serif;
+font-family: 'Inconsolata', monospace;
+font-family: 'Dosis', sans-serif;
+*/
+
 a
   margin-left 10px
   margin-right 10px
 
 #title
   font-size 25px
+  font-family Raleway, sans-serif
 
 .img
   width 100%
@@ -12,6 +36,7 @@ a
 body
   background-color #fff
   background-image url("../img/fondo bin.png")
+  font-family: Heebo, sans-serif
 
 #cont
   /*height 350px;
@@ -26,15 +51,13 @@ body
   /*background-color rgba(250, 72, 190, 0.5);*/
   padding-top 5px
   padding-bottom 15px
+  font-family Raleway, sans-serif
 
 .msj1
-  /*top 15%;
-    /*left 15%;
-    width 450px;*/
+
   color white
   background #ccc
   background-color rgba(36, 72, 72, 0.5)
-  /*background-color rgba(250, 150, 190, 0.5);*/
   position relative
   padding-top 5px
   padding-bottom 5px
@@ -48,54 +71,32 @@ body
 a
   color #fff
 
+a:hover
+  color #aaf
+  text-decoration none
+
 li
   font-size 20px
 
 #msj1
   top 300px
 
-/*#left {
-    height 100%;
-    width 25%;
-    background-color transparent;
-    position absolute;
-    top 0px;
-    left 15px;
-    background linear-gradient(to right, rgba(0,0,0,1) 0%, rgba(194,194,194,0) 76%, rgba(255,255,255,0) 100%);
-    opacity 0;
-}
-
-#lefthover {
-    opacity 1;
-}
-
-#right {
-    height 100%;
-    width 25%;
-    background-color transparent;
-    position absolute;
-    top 0px;
-    right 15px;
-    background linear-gradient(to left, rgba(0,0,0,1) 0%, rgba(194,194,194,0) 76%, rgba(255,255,255,0) 100%);
-    opacity 0;
-}
-
-#righthover {
-    opacity 1;
-}
-*/
 .content
-  height 700px
+  height 600px
   color #eee
   padding 25px
   background-attachment fixed
   background-size cover
 
+.section
+  background gradiente
+  color color-text
+  height auto
+
 #content1
   /*background-image url("../img/paisaje.jpg")*/
-  background-color #ccc
-  color #333
-  height auto
+  //background-color color-content
+  
 
 #content2
   /*position absolute;*/
@@ -125,17 +126,15 @@ li
   position relative
 
 #blog
-  background-image url("../img/solarSystem.png")
+  //background-image url("../img/solarSystem.png")
+  text-align center
 
 #wiki
   background-image url("../img/form.jpg")
 
-#flisol
-  background-image url("../img/flisol.jpg")
+#telegram
+  background-image url("../img/paisaje.jpg")
 
-#imgflisol
-  width 60%
-  padding-left 10%
 
 #images
   top 50px
@@ -155,7 +154,7 @@ li
   background-image url("../img/paisaje.jpg")
   background-attachment fixed
   background-size cover
-  height 700px
+  height 750px
 
 nav
   opacity 0
@@ -176,16 +175,38 @@ nav
   text-align left
 
 .spacer-long
-  height 80px
+  height 70px
 
 .spacer-short
   height 40px
 
 .distro
-  width 20%
+  width 70px
   position relative
   margin-left auto
   margin-right auto
 
+.distrologo
+    width 50px
+    position relative
+    margin-left auto
+    margin-right auto
+
 .circle
     border-radius 50%
+
+.center
+    margin-right: auto
+    margin-left: auto
+    text-align: center
+
+#titlenuc
+  font-size: 50px
+
+.link
+  text-align: center
+  font-size: 40px
+  font-family: Raleway, sans-serif
+  color: #000
+.link:hover
+    color: #333
